--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,183 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'IBM Plex Serif', serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.ibm-plex serif-thin {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 100;
+	font-style: normal;
+}
+
+.ibm-plex serif-extralight {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 200;
+	font-style: normal;
+}
+
+.ibm-plex serif-light {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 300;
+	font-style: normal;
+}
+
+.ibm-plex serif-regular {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 400;
+	font-style: normal;
+}
+
+.ibm-plex serif-medium {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 500;
+	font-style: normal;
+}
+
+.ibm-plex serif-semibold {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 600;
+	font-style: normal;
+}
+
+.ibm-plex serif-bold {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 700;
+	font-style: normal;
+}
+
+.ibm-plex serif-thin-italic {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 100;
+	font-style: italic;
+}
+
+.ibm-plex serif-extralight-italic {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 200;
+	font-style: italic;
+}
+
+.ibm-plex serif-light-italic {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 300;
+	font-style: italic;
+}
+
+.ibm-plex serif-regular-italic {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 400;
+	font-style: italic;
+}
+
+.ibm-plex serif-medium-italic {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 500;
+	font-style: italic;
+}
+
+.ibm-plex serif-semibold-italic {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 600;
+	font-style: italic;
+}
+
+.ibm-plex serif-bold-italic {
+	font-family: 'IBM Plex Serif', serif;
+	font-weight: 700;
+	font-style: italic;
+}
+
+.ibm-plex sans condensed-thin {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 100;
+	font-style: normal;
+}
+
+.ibm-plex sans condensed-extralight {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 200;
+	font-style: normal;
+}
+
+.ibm-plex sans condensed-light {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 300;
+	font-style: normal;
+}
+
+.ibm-plex sans condensed-regular {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 400;
+	font-style: normal;
+}
+
+.ibm-plex sans condensed-medium {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 500;
+	font-style: normal;
+}
+
+.ibm-plex sans condensed-semibold {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 600;
+	font-style: normal;
+}
+
+.ibm-plex sans condensed-bold {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 700;
+	font-style: normal;
+}
+
+.ibm-plex sans condensed-thin-italic {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 100;
+	font-style: italic;
+}
+
+.ibm-plex sans condensed-extralight-italic {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 200;
+	font-style: italic;
+}
+
+.ibm-plex sans condensed-light-italic {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 300;
+	font-style: italic;
+}
+
+.ibm-plex sans condensed-regular-italic {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 400;
+	font-style: italic;
+}
+
+.ibm-plex sans condensed-medium-italic {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 500;
+	font-style: italic;
+}
+
+.ibm-plex sans condensed-semibold-italic {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 600;
+	font-style: italic;
+}
+
+.ibm-plex sans condensed-bold-italic {
+	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	font-weight: 700;
+	font-style: italic;
+}
